<resources>
    <string name="app_name">Project3</string>
    <string name="notetaken">NoteTaken</string>
    <string name="a_note_taking_app">A Note Taking App</string>
    <string name="full_name">Full Name</string>
    <string name="dob">DOB</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">REGISTER</string>
    <string name="or_register_with">or Register With</string>
    <string name="todo">TODO</string>
</resources>