<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none"
    android:background="@drawable/background"
    tools:context=".RegisterUser">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

<!--        HEADER-->

        <TextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="serif-monospace"
            android:gravity="center"
            android:text="@string/notetaken"
            android:textColor="@color/white"
            android:textSize="45sp"
            android:textStyle="bold" />

<!--        SUBHEADER-->

    <TextView
        android:id="@+id/subheader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/a_note_taking_app"
        android:textColor="#5E35B1"
        android:textSize="15sp"
        android:textStyle="italic" />

<!--        FULLNAME-->

    <EditText
        android:id="@+id/fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/subheader"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="20dp"
        android:hint="@string/full_name"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="#455A64"
        android:autofillHints=""
        android:inputType="textPersonName" />

<!--        DOB-->

    <EditText
        android:id="@+id/birthdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fullname"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/ic_baseline_info_24"
        android:drawablePadding="20dp"
        android:hint="@string/dob"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="#455A64"
        android:autofillHints=""
        android:inputType="text" />

<!--        EMAIL-->

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/birthdate"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/ic_baseline_info_24"
        android:drawablePadding="20dp"
        android:hint="@string/email"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="#795548"
        android:autofillHints=""
        android:inputType="textEmailAddress" />

<!--        USERNAME-->

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="20dp"
        android:hint="@string/username"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="#616161"
        android:autofillHints=""
        android:inputType="text" />

<!--        PASSWORD-->

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/username"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:background="#30ffffff"
            android:drawableStart="@drawable/ic_baseline_info_24"
            android:drawablePadding="20dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="#B71C1C" />

<!--        REGISTER BUTTON-->

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/registeruser"
        android:layout_below="@id/password"
        android:text="@string/register"
        android:textColor="@color/white"
        android:backgroundTint="@color/design_default_color_primary_dark"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"/>


<!--    <LinearLayout-->
<!--        android:id="@+id/socialicons"-->
<!--        android:layout_width="match_parent"-->
<!--        android:orientation="vertical"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@id/registeruser"-->
<!--        android:layout_alignParentBottom="true"-->
<!--        android:gravity="center">-->

<!--        <TextView-->
<!--            android:id="@+id/others"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/or_register_with" />-->

<!--        <ImageView-->
<!--            android:layout_width="48dp"-->
<!--            android:layout_height="48dp"-->
<!--            android:src="@drawable/icon"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:layout_marginBottom="20dp"-->
<!--            android:contentDescription="@string/todo" />-->
<!--    </LinearLayout>-->
    </RelativeLayout>
</ScrollView>